--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,4 +22,4 @@ jobs:
           push: true
           context: .
           file: ./Dockerfile
-          tags: ghcr.io/${{ github.repository_owner }}/docker-hello-world:latest
+          tags: ghcr.io/farizap/docker-hello-world:latest
