--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,9 +20,14 @@ jobs:
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: Push to GitHub Packages
+        id: "build-push-docker"
         uses: docker/build-push-action@v2
+        env:
+          DIGEST: steps.run_tests.outputs.digest
         with:
           push: true
           context: .
           file: ./Dockerfile
           tags: ghcr.io/farizap/docker-hello-world:latest
+      - name: Test
+        run: echo "$"
