--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,15 +19,19 @@ jobs:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Set outputs
+        id: sha
+        run: echo "sha_short=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
       - name: Push to GitHub Packages
         id: "build-push-docker"
         uses: docker/build-push-action@v2
         env:
           DIGEST: steps.run_tests.outputs.digest
+          SHA: steps.sha.outputs.sha_short
         with:
           push: true
           context: .
           file: ./Dockerfile
-          tags: ghcr.io/farizap/docker-hello-world:latest
+          tags: ghcr.io/farizap/docker-hello-world:latest,ghcr.io/farizap/docker-hello-world:${SHA}
       - name: Test
         run: echo "$DIGEST"
