--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,6 +32,6 @@ jobs:
           push: true
           context: .
           file: ./Dockerfile
-          tags: ghcr.io/farizap/docker-hello-world:latest,ghcr.io/farizap/docker-hello-world:${SHA}
+          tags: ghcr.io/farizap/docker-hello-world:latest,ghcr.io/farizap/docker-hello-world:${{steps.sha.outputs.sha_short}}
       - name: Test
         run: echo "$DIGEST"
